# magpie-twitter-bot

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  bot.rs  config.rs  download.rs  lib.rs  oauth2_callback.rs
