[package]
name = "magpie-twitter-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.9.3"
indicatif = "0.17.2"
log = "0.4.17"
once_cell = "1.16.0"
oneshot-oauth2-callback = "0.1.0"
open = "3.0.3"
reqwest = { version = "0.11.13", default_features = false, features = ["rustls-tls"] }
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["formatting"] }
tokio = { version = "1.22.0", features = ["macros"] }
twitter-v2 = { version = "0.1", default_features = false, features = ["oauth2", "rustls-tls"] }
url = "2.3.1"

[dev-dependencies]
pretty_assertions = "1"
